# app-specification-helper

./: .gitignore  README.md  test_keyword.py
data/: query_and_tables.json  test_query_and_tables.json  test_tables_structured.json
nl2sql_v3/: .gitignore  0.2.0  README.md  __init__.py  cli.py  config.py  config.yaml  main.py  pyproject.toml  requirements.txt
nl2sql_v3/agent/: __init__.py  agent.py  conversation.py  graph.py  leader_agent.py  llm_client.py  nl2sql_agent.py  nl2sql_prompts.py  prompts.py  schema_builder.py
nl2sql_v3/agent/tests/: test_agent.py
nl2sql_v3/client/: api_client.py  es_client.py
nl2sql_v3/data/: evaluator.py  loader.py
nl2sql_v3/models/: table_info.py
nl2sql_v3/recall/: __init__.py  base.py  dense.py  fusion.py  keyword.py  sparse.py
nl2sql_v3/scripts/: convert_test.py  extract_tables.py
nl2sql_v3/technical_doc/: agent.md  benchmark.md  rag.md  rag_explore.md
nl2sql_v3/util/: __init__.py  db_manager.py
nl2sql_v3/util/test/: test_db_manager.py
templates/: api.md  architecture.md  main.md  requirements.md  update.md
